Fixed home section space on mobile

--- a/style.css
+++ b/style.css
@@ -458,8 +458,8 @@ input:checked + .slider::before {
 }
 
 @media screen and (max-width: 476px) {
-  .home-text-group {
-    padding-top: 2rem;
+  .home {
+    padding-top: 10rem;
   }
 }
 
